Сделал съёмный прицел для СКС, подкорректировал конфиги

--- a/gamedata/config/weapons/addon_scope.ltx
+++ b/gamedata/config/weapons/addon_scope.ltx
@@ -10,10 +10,6 @@ cost			= 1000
 ;запретить ѕЌ¬ 
 nightvision_lock	= true
 inv_weight		= 0.001
-;_пробуем наследовать отсюда:
-;-scope_texture		= wpn\scopes\scope_test.dds	;прозрачный фон (удобно дл€ подгонки положени€), потом откорректируетс€ прицелом, а тонка€ подстройка - в секции ствола
-;-scope_zoom_factor		= 1.0					;ставить дл€ 3D-прицелов, должен быть равен ironsight_zoom_factor (Ќј—Ћ≈ƒ”≈“—я =1) 
-;-scope_lense_fov_factor 	= 1.0					;пробуем дл€ сменных 3D-прицелов (потом откорректируетс€ прицелом, а тонка€ подстройка - в секции ствола)
 
 ;KRodin: заткнул вылеты, хз почему вылетает
 inv_grid_width		= 2
@@ -254,8 +250,16 @@ inv_grid_x			= 37	;38
 inv_grid_y			= 36
 
 scope_texture		= wpn\scopes\crosshair_pu
-scope_lense_fov_factor = 13.0
-;4 ~ 1х, 9 ~ 2х, 16 ~ 4х
+
+;******************************************************************************
+scope_zoom_factor      = 1 ;ставить дл€ 3D-прицелов
+scope_lense_fov_factor = 6 ;FOV в 3D прицеле
+; ’уд фов во врем€ прицеливани€, чтобы ствол был близко к камере и не залазил в камеру при выстреле
+scope_lense_hud_fov    = 0.15
+; »нерци€ мышки в прицеле
+scope_inertion_factor  = 5
+;******************************************************************************
+
 ;разрешить ѕЌ¬ (тест открытой сетки)
 nightvision_lock	= false
 fake_item_section	= fake_wpn_addon_scope_pu
