--- a/gamedata/config/weapons/w_m16a1_sk1.ltx
+++ b/gamedata/config/weapons/w_m16a1_sk1.ltx
@@ -225,12 +225,8 @@ silencer_light_time 		= 0.2
 
 zoom_enabled			= true
 
-;ПРОБУЕМ пока один набор на всех прописать напрямую (ВРЕМЕННО, пока KRodin в движок всё перенести не раздуплится)
-highlight_addons = fake_wpn_addon_grenade_launcher_m203, fake_wpn_addon_remington_870mcs, fake_wpn_addon_scope_colt3 
-;при торговле обрабатывает не все аддоны из списка, а только те прицелы, что в секции ствола.
-;С патронами, глушаками и подстволами всё нормально - они же движковые (не имеют фейков).
-;Магазины, прицельные планки и ручки почему-то не обрабатываются. 
-;при закрытии инвентаря фейки превращаются в не фейки, и в торговле поэтому глюки
+highlight_addons = fake_wpn_addon_grenade_launcher_m203, fake_wpn_addon_remington_870mcs, fake_wpn_addon_scope_colt3, wpn_masterkey
+
 ;Флаг, позволяющий для всех предметов реагировать на флаг FRuckDefault. Если флаг установлен, хабар будет подбираться в рюкзак, а не в слот по умолчанию.
 default_to_ruck = true
 
