--- a/gamedata/config/misc/trade_dolg.ltx
+++ b/gamedata/config/misc/trade_dolg.ltx
@@ -387,10 +387,10 @@ wpn_addon_grip = 0.5,	0.3
 wpn_addon_mtk83  = 0.5,	0.3
 wpn_addon_svd_scheek  = 0.5,	0.3
 
-wpn_addon_scope_1p29           = 1.1,	0.5
+wpn_addon_scope_1p29           = 1.1,	 0.5
 wpn_addon_scope_kobra           = 1.1,	0.5
 wpn_addon_scope_1pn51           = 1.1,	0.5
-wpn_addon_scope_1p59           = 1.1,	0.5
+wpn_addon_scope_1p59           = 1.1,	 0.5
 wpn_addon_scope_eotech           = 1.1,	0.5
 
 wpn_addon_mag_akm30         = 0.5,	0.3
@@ -534,31 +534,46 @@ wpn_binoc_m1			= 1,	1
 explosive_mobiltank	= 2, 1
 
 ; ÌÓ‚˚Â ‡‰‰ÓÌ˚
-wpn_addon_scope		= 1,	0.9
-wpn_addon_scope_susat	= 1,	0.9
-wpn_addon_acog		= 1,	0.9
-wpn_addon_scope_1p29		= 1,	0.9
-wpn_addon_scope_kobra		= 1,	0.9
-wpn_zf4             = 1,	0.9
-
-wpn_addon_silencer			= 1,	0.9
-wpn_9mm_nato_silencer			= 1,	0.9
-wpn_addon_sil_1143_p			= 1,	0.9
-wpn_addon_sil_556_ar			= 1,	0.9
-wpn_addon_sil_762_pbs1			= 1,	0.9
-wpn_addon_sil_762_tgp-v			= 1,	0.9
-wpn_addon_sil_545_pbs4			= 1,	0.9
-wpn_addon_sil_545_tgp-a			= 1,	0.9
-wpn_addon_sil_545_atg			= 1,	0.9
-
-wpn_addon_svd_scheek			= 1,	0.9
-
-wpn_addon_grenade_launcher		= 1,	0.9
-wpn_addon_grenade_launcher_m203 	= 1,	0.9
-
-wpn_addon_mag_rpk40         = 1,	0.9
-wpn_addon_mag_rpk7445       = 1,	0.9
-wpn_addon_mag_svd20       	= 1,	0.9
+wpn_addon_apb_buttstock = 1, 1
+wpn_addon_apb_silencer = 1, 1
+wpn_addon_grenade_launcher = 1, 1
+wpn_addon_grip = 1, 1
+wpn_addon_mag_ak10230 = 1, 1
+wpn_addon_mag_ak10560 = 1, 1
+wpn_addon_mag_ak7430 = 1, 1
+wpn_addon_mag_akm30 = 1, 1
+wpn_addon_mag_as20 = 1, 1
+wpn_addon_mag_murka = 1, 1
+wpn_addon_mag_rpk40 = 1, 1
+wpn_addon_mag_rpk7445 = 1, 1
+wpn_addon_mag_rpk75 = 1, 1
+wpn_addon_mag_sr30 = 1, 1
+wpn_addon_mag_svd10 = 1, 1
+wpn_addon_mag_svd20 = 1, 1
+wpn_addon_mag_vepr4 = 1, 1
+wpn_addon_mag_vepr8 = 1, 1
+wpn_addon_mag_vsk20 = 1, 1
+wpn_addon_mag_vss10 = 1, 1
+wpn_addon_mtk83 = 1, 1
+wpn_addon_scope = 1, 1
+wpn_addon_scope_1p29 = 1, 1
+wpn_addon_scope_1p59 = 1, 1
+wpn_addon_scope_1pn51 = 1, 1
+wpn_addon_scope_kobra = 1, 1
+wpn_addon_scope_pgo7 = 1, 1
+wpn_addon_scope_pso1m21 = 1, 1
+wpn_addon_scope_pu = 1, 1
+wpn_addon_sil_545_atg = 1, 1
+wpn_addon_sil_545_pbs4 = 1, 1
+wpn_addon_sil_545_tgp-a = 1, 1
+wpn_addon_sil_762_pbs1 = 1, 1
+wpn_addon_sil_762_svu = 1, 1
+wpn_addon_sil_762_tgp-v = 1, 1
+wpn_addon_sil_939 = 1, 1
+wpn_addon_sil_m1895 = 1, 1
+wpn_addon_sil_pb = 1, 1
+wpn_addon_silencer = 1, 1
+wpn_addon_svd_scheek = 1, 1
 
 wpn_addon_mag_usp8       	= 1,	0.9
 wpn_addon_mag_usp15       	= 1,	0.9
@@ -651,30 +666,48 @@ wpn_mp40            = 1,	3
 wpn_awm				    ;NO TRADE
 
 ;ADDONS
-wpn_addon_scope		= 1,	3
-wpn_addon_scope_susat	= 1,	3
-wpn_addon_acog		= 1,	3
-wpn_addon_scope_1p29		= 1,	3
-wpn_addon_scope_kobra		= 1,	3
-wpn_zf4             = 1,	3
+wpn_addon_scope_pso1m21 = 7, 10
+wpn_addon_mag_murka = 7, 10
+wpn_addon_sil_m1895 = 7, 10
+wpn_addon_scope_kobra = 7, 10
+wpn_addon_scope_pgo7 = 7, 10
+wpn_addon_sil_939 = 7, 10
+wpn_addon_sil_545_pbs4 = 7, 10
+wpn_addon_mag_vepr4 = 7, 10
+wpn_addon_mag_vsk20 = 7, 10
+wpn_addon_mag_svd10 = 7, 10
+wpn_addon_mag_ak10230 = 7, 10
+wpn_addon_mag_as20 = 7, 10
+wpn_addon_grip = 7, 10
+wpn_addon_sil_545_tgp-a = 7, 10
+wpn_addon_mag_rpk75 = 7, 10
+wpn_addon_sil_762_pbs1 = 7, 10
+wpn_addon_scope_1p59 = 7, 10
+wpn_addon_mag_akm30 = 7, 10
+wpn_addon_mag_rpk40 = 7, 10
+wpn_addon_sil_pb = 7, 10
+wpn_addon_mag_svd20 = 7, 10
+wpn_addon_mag_sr30 = 7, 10
+wpn_addon_apb_buttstock = 7, 10
+wpn_addon_mag_vepr8 = 7, 10
+wpn_addon_mag_ak10560 = 7, 10
+wpn_addon_scope_1pn51 = 7, 10
+wpn_addon_scope_1p29 = 7, 10
+wpn_addon_sil_762_tgp-v = 7, 10
+wpn_addon_apb_silencer = 7, 10
+wpn_addon_silencer = 7, 10
+wpn_addon_mag_ak7430 = 7, 10
+wpn_addon_sil_762_svu = 7, 10
+wpn_addon_mag_rpk7445 = 7, 10
+wpn_addon_scope = 7, 10
+wpn_addon_mag_vss10 = 7, 10
+wpn_addon_mtk83 = 7, 10
+wpn_addon_svd_scheek = 7, 10
+wpn_addon_grenade_launcher = 7, 10
+wpn_addon_sil_545_atg = 7, 10
+wpn_addon_scope_pu = 7, 10
 
-wpn_addon_silencer			= 1,	3
-wpn_9mm_nato_silencer			= 1,	3
-wpn_addon_sil_1143_p			= 1,	3
-wpn_addon_sil_556_ar			= 1,	3
-wpn_addon_sil_762_pbs1			= 1,	3
-wpn_addon_sil_762_tgp-v			= 1,	3
-wpn_addon_sil_545_pbs4			= 1,	3
-wpn_addon_sil_545_tgp-a			= 1,	3
-wpn_addon_sil_545_atg			= 1,	3
 
-wpn_addon_svd_scheek			= 1,	3
-
-wpn_addon_grenade_launcher		= 1,	3
-wpn_addon_grenade_launcher_m203 	= 1,	3
-
-wpn_addon_mag_usp8 	= 1,	3
-wpn_addon_mag_usp15 	= 1,	3
 
 ;ÃÂ‰ËÍ‡ÏÂÌÚ˚
 bandage				= 1,	7
@@ -716,10 +749,6 @@ sigaret             = 1,	6
 matras              = 1,	2
 amk_metka           = 1,	2
 
-; Ï‡„‡ÁËÌ˚
-wpn_addon_mag_rpk40         = 1,	3
-wpn_addon_mag_rpk7445       = 1,	3
-wpn_addon_mag_svd20       	= 1,	3
 ;------------------------- ¿——Œ–“»Ã≈Õ“ ≈—À» Œ¡—“–≈ÀﬂÀ»  ¿–¿¬¿Õ -----------------------
 [caravan_hitted_supplies]
 syrok_bad		= 1,	2
