--- a/gamedata/config/misc/trade_merc.ltx
+++ b/gamedata/config/misc/trade_merc.ltx
@@ -271,6 +271,7 @@ ammo_m208a			= 5,	1
 ammo_11.43x23_fmj	= 7,	0.7
 ammo_11.43x23_hydro	= 6,	0.6
 ammo_7.62x54_7h14	= 5,	0.6
+ammo_8.6x70_lm		= 10,	1
 
 conserva			= 2,	0.9
 conserva2			= 2,	0.8
@@ -297,6 +298,32 @@ device_termovizor	= 1,	1
 
 explosive_mobiltank	= 2, 1
 
+; аддоны
+
+wpn_9mm_nato_silencer = 1, 1
+wpn_addon_acog = 1, 1
+wpn_addon_grenade_launcher_m203 = 1, 1
+wpn_addon_l85carryhandle = 1, 1
+wpn_addon_mag_cmag100 = 1, 1
+wpn_addon_mag_glock19 = 1, 1
+wpn_addon_mag_glock33 = 1, 1
+wpn_addon_mag_mk6 = 1, 1
+wpn_addon_mag_usp15 = 1, 1
+wpn_addon_mag_usp8 = 1, 1
+wpn_addon_magnifier = 1, 1
+wpn_addon_mauser_buttstock = 1, 1
+wpn_addon_nightvision = 1, 1
+wpn_addon_prail = 1, 1
+wpn_addon_scope_aimpoint = 1, 1
+wpn_addon_scope_colt3 = 1, 1
+wpn_addon_scope_eotech = 1, 1
+wpn_addon_scope_irnv = 1, 1
+wpn_addon_scope_long = 1, 1
+wpn_addon_scope_susat = 1, 1
+wpn_addon_sil_1143_p = 1, 1
+wpn_addon_sil_556_ar = 1, 1
+wpn_masterkey = 1, 1
+wpn_zf4 = 1, 1
 ;------------------------- ПРОДАЖА -----------------------
 [merc_generic_sale]:unic_sale
 ;Броники
@@ -350,6 +377,7 @@ ammo_m209				= 1,	4
 ammo_arbolt				= 1,	4
 ammo_m208a				= 1,	4
 ammo_flame			= 1,	6
+ammo_8.6x70_lm		= 1,	4
 
 ;Оружие
 wpn_akm_akm30_ironsight		= 1,	3   	   
@@ -389,23 +417,31 @@ wpn_mp40            = 1,	4
 wpn_awm		= 1,	3 
 
 ;ADDONS
-wpn_addon_scope		= 1,	5
-wpn_addon_scope_susat	= 1,	5
-wpn_addon_acog		= 1,	5
-wpn_zf4             = 1,	3
+wpn_9mm_nato_silencer = 7, 10
+wpn_addon_acog = 7, 10
+wpn_addon_grenade_launcher_m203 = 7, 10
+wpn_addon_l85carryhandle = 7, 10
+wpn_addon_mag_cmag100 = 7, 10
+wpn_addon_mag_glock19 = 7, 10
+wpn_addon_mag_glock33 = 7, 10
+wpn_addon_mag_mk6 = 7, 10
+wpn_addon_mag_usp15 = 7, 10
+wpn_addon_mag_usp8 = 7, 10
+wpn_addon_magnifier = 7, 10
+wpn_addon_mauser_buttstock = 7, 10
+wpn_addon_nightvision = 7, 10
+wpn_addon_prail = 7, 10
+wpn_addon_scope_aimpoint = 7, 10
+wpn_addon_scope_colt3 = 7, 10
+wpn_addon_scope_eotech = 7, 10
+wpn_addon_scope_irnv = 7, 10
+wpn_addon_scope_long = 7, 10
+wpn_addon_scope_susat = 7, 10
+wpn_addon_sil_1143_p = 7, 10
+wpn_addon_sil_556_ar = 7, 10
+wpn_masterkey = 7, 10
+wpn_zf4 = 7, 10
 
-wpn_addon_silencer		= 1,	5
-wpn_9mm_nato_silencer	= 1,	5
-wpn_addon_sil_1143_p	= 1,	5
-wpn_addon_sil_556_ar	= 1,	5
-wpn_addon_sil_762_pbs1	= 1,	5
-wpn_addon_sil_762_tgp-v	= 1,	5
-wpn_addon_sil_545_pbs4	= 1,	5
-wpn_addon_sil_545_tgp-a	= 1,	5
-wpn_addon_sil_545_atg	= 1,	5
-
-wpn_addon_grenade_launcher	= 1,	5
-wpn_addon_grenade_launcher_m203 = 1,	5
 
 ;Медикаменты
 bandage				= 1,	8
