Поправлен уникальный СКС

--- a/gamedata/config/weapons/w_sks.ltx
+++ b/gamedata/config/weapons/w_sks.ltx
@@ -220,26 +220,26 @@ inv_grid_y			= 31				;снайперка с несъёмным ПУ
 inv_weight		 			= 4.0		;3.75 +0.27 ПУ
 
 ;-ammo_mag_size		= 8		;-анимки обоймы семёрки
-ammo_class			= ammo_9x39_ap, ammo_9x39_pab9
-hit_power			= 1.1
+ammo_class			= ammo_8.6x70_lm
+hit_power			= 1.6
 hit_impulse			= 40
-fire_distance	= 550   ;КОЭФФИЦИЕНТ максимальной дистанции  полета пули (затем она падает на землю и исчезает), реальная 200-400 м (баллистическая кривая должна быть более кривая, 1хрен дистанция остаётся больше А-Лайфа - в ОГСЕ switch_distance 150). Логично прописать значение эффективного огня(пистолеты-пулеметы 50-200м, пистолеты 50м, дробовики 30м и нож полметра)
-bullet_speed		= 700
+fire_distance	= 950   ;КОЭФФИЦИЕНТ максимальной дистанции  полета пули (затем она падает на землю и исчезает), реальная 200-400 м (баллистическая кривая должна быть более кривая, 1хрен дистанция остаётся больше А-Лайфа - в ОГСЕ switch_distance 150). Логично прописать значение эффективного огня(пистолеты-пулеметы 50-200м, пистолеты 50м, дробовики 30м и нож полметра)
+bullet_speed		= 900
 
-silencer_hit_power       	= 1.0
+silencer_hit_power       	= 1.3
 silencer_hit_impulse	 	= 30
-silencer_fire_distance   	= 450
-silencer_bullet_speed	 	= 550
+silencer_fire_distance   	= 750
+silencer_bullet_speed	 	= 600
 
 fire_dispersion_base		= 0.15		;0.075 угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
 
-snd_shoot			= weapons\svu\svu_shot1
-snd_shoot1			= weapons\svu\svu_shot2
-snd_shoot2			= weapons\svu\svu_shot3
-snd_silncer_shot				= weapons\val\val_9x39_shotbullet_0
-snd_silncer_shot1				= weapons\val\val_9x39_shotbullet_1
-snd_silncer_shot2				= weapons\val\val_9x39_shotbullet_2
-snd_silncer_shot3				= weapons\val\val_9x39_shotbullet_3
+snd_shoot			= weapons\sks\sks_shoot
+snd_shoot1			= weapons\sks\sks_shoot
+snd_shoot2			= weapons\sks\sks_shoot
+snd_silncer_shot				= weapons\svu\svu_shot
+snd_silncer_shot1				= weapons\svu\svu_shot1
+snd_silncer_shot2				= weapons\svu\svu_shot2
+snd_silncer_shot3				= weapons\svu\svu_shot3
 
 highlight_addons = ;
 
