Jek@n_quests_fix_6 + spawn_sections.ltx

--- a/gamedata/config/creatures/spawn_sections.ltx
+++ b/gamedata/config/creatures/spawn_sections.ltx
@@ -1874,7 +1874,8 @@ custom_data = scripts\jek@n\kulg_band\cit_kulgband_monolit.ltx
 species				= mobenemy2
 custom_data = scripts\jek@n\mobs\cit_kulgband_mob.ltx
 
-[cit_kulgband_mob2]:bloodsucker_strong
+;[cit_kulgband_mob2]:bloodsucker_strong
+[cit_kulgband_mob2]:fracture_weak
 species				= mobenemy2
 custom_data = scripts\jek@n\mobs\cit_kulgband_mob.ltx
 
