--- a/gamedata/config/misc/quest_items.ltx
+++ b/gamedata/config/misc/quest_items.ltx
@@ -3267,14 +3267,14 @@ cost				= 1000
 GroupControlSection		= spawn_group
 discovery_dependency		=
 $spawn				= "devices\mobile_changer"
-visual				= equipments\item_pda.ogf
+visual				= equipments\item_merger.ogf
 $prefetch			= 32
 cform				= skeleton
 radius				= 1
 description			= ds_glavar_bag_desc
 inv_name			= ds_glavar_bag_name
-inv_name_short			= ds_glavar_bag_name
-inv_weight			= 10
+inv_name_short		= ds_glavar_bag_name
+inv_weight			= 6
 inv_grid_width		= 2
 inv_grid_height		= 2
 inv_grid_x			= 58
