--- a/gamedata/config/tuning/ogse_config.ltx
+++ b/gamedata/config/tuning/ogse_config.ltx
@@ -10,7 +10,7 @@ max_item_mass			= 50.0
 
 [inventory]
 take_dist		= 2.5 ; не увеличивать, иначе будет глючить окно разговора
-max_weight              =100
+max_weight              =70
 max_ruck		= 56
 max_belt		= 13 ;15
 slots			= 13
@@ -45,7 +45,7 @@ use_radio=kUSE_RADIO
 option_random_treasure =0
 
 ;Частота выпадания тайников при выполненном condlist. Чем меньше, тем больше вероятность
-treasure_dropout =0
+treasure_dropout =60
 
 ;Вывод содержимого нычки
 treasure_need_text =1
@@ -60,10 +60,10 @@ news_showtime =13000 ;стандартное время показа сообщения (от 5000 до 20000)
 t_surge =36
 
 ;Периодичность респауна монстров и людей в игровых часах. Если указать 0, то респаун будет происходить сразу, как только на локации освободится место для объектов. Указывайте только целые неотрицательные числа.
-t_common =24
+t_common =12
 
 ;Дополнительный спавн опасностей по окончанию Выброса. 1 - вкл., 0 - выкл.
-additional_spawn =0
+additional_spawn =1
 
 ;Таймер выброса на ЧАЭС в минутах реального времени.
 aes_timer =15
@@ -92,13 +92,13 @@ weather_type =0
 ; вероятность выпадения костюмов
 suit_probability =10
 exo_probability =5
-s_time_factor=2
+s_time_factor=5
 
 ; Авторазрядка оружия при его подбирании. Оружие, взятое в руки - не учитывается.
 autounload_wpn =0
 
 ; Динамический худ
-suithud_enable =0
+suithud_enable =true
 ; Эффект дыхания
 blurs_enable =1
 
@@ -109,15 +109,13 @@ blurs_enable =1
     schedule_max		= 1												; milliseconds
     process_time		= 900											; microseconds
     update_monster_factor	= 0.1
-    time_factor			=2		
+    time_factor			=5		
     normal_time_factor		= 15		; животные в оффлайне перемещаются со скоростью, делённой на этот фактор (чтобы не бегали очень быстро)
     max_combat_iteration_count	= 5	;10	; maximum combat iteration count
     switch_distance		= 150	;200    ;150	; metres
     switch_factor		= 0.1											; 
-    start_time			=11:00:00
+    start_time			=06:00:00
     start_date			= 01.05.2012
-    autosave_interval		= 23:59:59
-    delay_autosave_interval	= 00:00:30
 	objects_per_update	= 10
 	start_game_callback	= _G.start_game_callback					; on starting new game or loading saved one
 	
@@ -125,7 +123,7 @@ blurs_enable =1
 ;Параметры оружейки
 [wpn_addon_setup]
 ;Запретить ПНВ во время прицеливания через оптику (ДЕФ_ОГСЕ true)
-	cheat_nv_block =false
+	cheat_nv_block =true
 ;ИСКЛЮЧЕНИЕ: коллиматоры, открытая оптика nightvision_lock = false в конфиге прицела/ствола
 
 ;Разрешить автостарт режима НВ во время прицеливания (ДЕФ_ОГСЕ false)
