--- a/gamedata/config/tuning/ogse_config.ltx
+++ b/gamedata/config/tuning/ogse_config.ltx
@@ -98,7 +98,7 @@ s_time_factor=5
 autounload_wpn =0
 
 ; Динамический худ
-suithud_enable =true
+suithud_enable =false
 ; Эффект дыхания
 blurs_enable =1
 
