Заменил миниган на ДШК
У минигана руки неправильные

--- a/gamedata/config/misc/death_generic.ltx
+++ b/gamedata/config/misc/death_generic.ltx
@@ -147,6 +147,7 @@ wpn_vintorez = true
 wpn_svu = true
 wpn_gauss = true
 wpn_m_134 = true
+wpn_dshkm = true
 wpn_rpg7 = true
 wpn_sig_m1 = true
 wpn_sig_m2 = true
