--- a/gamedata/config/misc/trade_barman.ltx
+++ b/gamedata/config/misc/trade_barman.ltx
@@ -220,6 +220,7 @@ wpn_colt_m1				;NO TRADE
 wpn_mp5_m2				;NO TRADE
 wpn_sig_m2				;NO TRADE
 wpn_m_134				;NO TRADE
+wpn_dshkm				;NO TRADE
 wpn_vintorez_m1			;NO TRADE
 
 ;------------------------- онйсойю еякх лш нахдекх дхццепю -----------------------
@@ -486,6 +487,7 @@ wpn_colt_m1				= 1,	0.5
 wpn_mp5_m2				= 1,	0.5
 wpn_sig_m2				= 1,	0.5
 wpn_m_134				= 1,	0.5
+wpn_dshkm				= 1,	0.5
 wpn_vintorez_m1			;NO TRADE
 
 ;------------------------- юяянпрхлемр -----------------------
