--- a/gamedata/config/misc/trade_billy.ltx
+++ b/gamedata/config/misc/trade_billy.ltx
@@ -229,6 +229,7 @@ wpn_colt_m1				= 1,	2.0
 wpn_mp5_m2				= 1,	2.0
 wpn_sig_m2				= 1,	2.0
 wpn_m_134				= 1,	2.0
+wpn_dshkm				= 1,	2.0
 wpn_vintorez_m1			;NO TRADE
 
 [billy_normal_buy]:unic_buy, weapons_buy_billy
@@ -453,6 +454,7 @@ wpn_colt_m1				= 1,	2.0
 wpn_mp5_m2				= 1,	2.0
 wpn_sig_m2				= 1,	2.0
 wpn_m_134				= 1,	2.0
+wpn_dshkm				= 1,	2.0
 wpn_vintorez_m1			;NO TRADE
 
 ;------------------------- ¿——Œ–“»Ã≈Õ“ -----------------------
