--- a/gamedata/config/misc/trade_drozd.ltx
+++ b/gamedata/config/misc/trade_drozd.ltx
@@ -208,6 +208,7 @@ wpn_mp5_m2				= 1.1,	0.5
 wpn_sig_m2				= 1.1,	0.5
 wpn_saiga12c_m1		    = 1.1,	0.5
 wpn_m_134				= 1.1,	0.5
+wpn_dshkm				= 1.1,	0.5
 wpn_mac10_m1			= 1.1,	0.5
 wpn_vintorez_m1			= 1.1,	0.5
 
