--- a/gamedata/config/misc/trade_generic.ltx
+++ b/gamedata/config/misc/trade_generic.ltx
@@ -303,6 +303,7 @@ wpn_colt_m1				= 0.5,	0.3
 wpn_mp5_m2				= 0.5,	0.3
 wpn_sig_m2				= 0.5,	0.3
 wpn_m_134				= 0.5,	0.3
+wpn_dshkm				= 0.5,	0.3
 wpn_vintorez_m1			= 0.5,	0.3
 
 ;------------------------- ÏÐÎÄÀÆÀ -----------------------
