--- a/gamedata/config/misc/trade_military.ltx
+++ b/gamedata/config/misc/trade_military.ltx
@@ -244,6 +244,7 @@ wpn_colt_m1				= 1.1,	0.5
 wpn_mp5_m2				= 1.1,	0.5
 wpn_sig_m2				= 1.1,	0.5
 wpn_m_134				= 1.1,	0.5
+wpn_dshkm				= 1.1,	0.5
 wpn_vintorez_m1			= 1.1,	0.5
 
 ;------------------------- ¿——Œ–“»Ã≈Õ“ -----------------------
@@ -268,6 +269,7 @@ ammo_7.62x54_ap		= 7,	0.8
 ammo_og-7b			= 5,	1
 ammo_vog-25			= 7,	0.9
 ammo_vog-25p		= 6,	0.9
+ammo_12.7x108		= 10,	1
 
 wpn_ak74n_ak74n30_ironsight			= 1,	1
 wpn_aks74ub_aks74ub30_ironsight			= 1,	0.9
@@ -275,6 +277,8 @@ wpn_ak102_ak10230_stok_kobra           = 1,	0.5
 wpn_swd_svd10_pso1				= 1,	0.5
 
 wpn_addon_svd_scheek				= 1,	0.5
+
+wpn_pp2000              = 1,	1
 
 grenade_f1			= 1,	0.9   
 grenade_light		= 1,	0.9
@@ -364,6 +368,7 @@ ammo_m209			= 2,	5
 ammo_arbolt			= 1,	5
 ammo_m208a			= 2,	5
 ammo_flame			= 1,	6
+ammo_12.7x108		= 2,	5
 
 ;ŒÛÊËÂ
 wpn_akm_akm30_ironsight			= 1,	4  
@@ -371,6 +376,8 @@ wpn_ak74n_ak74n30_ironsight				= 1,	4
 wpn_aks74ub_aks74ub30_ironsight				= 1,	4
 wpn_swd_svd10_pso1         = 1,	4
 wpn_ak102_ak10230_stok_kobra           = 1,	4
+
+wpn_pp2000              = 1,	4
 
 wpn_bm16				= 1,	4
 wpn_bm16_full			= 1,	4
