--- a/gamedata/config/misc/trade_obmen.ltx
+++ b/gamedata/config/misc/trade_obmen.ltx
@@ -291,6 +291,7 @@ wpn_colt_m1				= 0.0,	0.0
 wpn_mp5_m2				= 0.0,	0.0
 wpn_sig_m2				= 0.0,	0.0
 wpn_m_134				= 0.0,	0.0
+wpn_dshkm				= 0.0,	0.0
 wpn_vintorez_m1			= 0.0,	0.0
 
 ;------------------------- ÏÐÎÄÀÆÀ -----------------------
