--- a/gamedata/config/misc/trade_povar.ltx
+++ b/gamedata/config/misc/trade_povar.ltx
@@ -244,6 +244,7 @@ wpn_colt_m1				= 1.2,	0.6
 wpn_mp5_m2				= 1.2,	0.6
 wpn_sig_m2				= 1.2,	0.6
 wpn_m_134				= 1.3,	0.6
+wpn_dshkm				= 1.3,	0.6
 wpn_vintorez_m1			= 1.3,	0.6
 
 ;------------------------- ¿——Œ–“»Ã≈Õ“ -----------------------
