--- a/gamedata/config/misc/trade_unic.ltx
+++ b/gamedata/config/misc/trade_unic.ltx
@@ -233,6 +233,7 @@ wpn_colt_m1			;NO TRADE
 wpn_mp5_m2			;NO TRADE
 wpn_sig_m2			;NO TRADE
 wpn_m_134			;NO TRADE
+wpn_dshkm			;NO TRADE
 wpn_vintorez_m1		;NO TRADE
 
 ;#####-ARENA-#####
