--- a/gamedata/config/misc/trade_weapons.ltx
+++ b/gamedata/config/misc/trade_weapons.ltx
@@ -24,6 +24,7 @@ wpn_sig_m1				;NO TRADE
 wpn_sig_m2				;NO TRADE
 wpn_svu_m1				;NO TRADE
 wpn_m_134				;NO TRADE
+wpn_dshkm				;NO TRADE
 
 [arena_weapons_buy_notrade]
 wpn_pm_arena			;NO TRADE
