--- a/gamedata/config/misc/random_task_reward.ltx
+++ b/gamedata/config/misc/random_task_reward.ltx
@@ -593,7 +593,7 @@ hard_task = medkit_army, dix
 [rndm_tsk_rwrd_barman_weapon]
 easy_task = wpn_ak74n_ak74n30_ironsight, wpn_aks74ub_aks74ub30_ironsight, wpn_mp5, wpn_mac10
 normal_task = wpn_akm_akm30_ironsight, wpn_wincheaster1300, wpn_spas12, wpn_vintorez, wpn_swd_svd10_pso1, wpn_ak102_ak10230_stok_kobra, wpn_addon_sil_545_atg, wpn_m16a1_sk1, wpn_desert_eagle
-hard_task = wpn_swd_svd20_pso1, wpn_ak102_ak10230_custom_grip_kobra, wpn_m_134
+hard_task = wpn_dshkm, wpn_swd_svd20_pso1, wpn_ak102_ak10230_custom_grip_kobra
 
 [rndm_tsk_rwrd_barman_ammo]
 easy_task = ammo_5.45x39_fmj, ammo_11.43x23_fmj, ammo_12x70_kart, grenade_rgd5
