--- a/gamedata/config/misc/trade_bandit.ltx
+++ b/gamedata/config/misc/trade_bandit.ltx
@@ -274,6 +274,7 @@ wpn_colt_m1				= 1,	0.5
 wpn_mp5_m2				= 1,	0.5
 wpn_sig_m2				= 1,	0.5
 wpn_m_134				= 1,	0.5
+wpn_dshkm				= 1,	0.5
 wpn_vintorez_m1			= 1,	0.5
 
 ;------------------------- ¿——Œ–“»Ã≈Õ“ -----------------------
