--- a/gamedata/config/misc/trade_dolg.ltx
+++ b/gamedata/config/misc/trade_dolg.ltx
@@ -224,6 +224,7 @@ wpn_colt_m1				;NO TRADE
 wpn_mp5_m2				;NO TRADE
 wpn_sig_m2				;NO TRADE
 wpn_m_134				;NO TRADE
+wpn_dshkm				;NO TRADE
 wpn_vintorez_m1			;NO TRADE
 
 ;------------------------- онйсойю еякх лш нахдекх дхццепю -----------------------
@@ -471,6 +472,7 @@ wpn_colt_m1				= 1.1,	0.5
 wpn_mp5_m2				= 1.1,	0.5
 wpn_sig_m2				= 1.1,	0.5
 wpn_m_134				= 1.1,	0.5
+wpn_dshkm				= 1.1,	0.5
 wpn_vintorez_m1			= 1.1,	0.5
 
 ;------------------------- юяянпрхлемр -----------------------
