--- a/gamedata/config/misc/trade_pri.ltx
+++ b/gamedata/config/misc/trade_pri.ltx
@@ -269,6 +269,7 @@ wpn_colt_m1				= 1.1,	0.5
 wpn_mp5_m2				= 1.1,	0.5
 wpn_sig_m2				= 1.1,	0.5
 wpn_m_134				= 1.1,	0.5
+wpn_dshkm				= 1.1,	0.5
 wpn_vintorez_m1			= 1,	0.5
 
 ;------------------------- ¿——Œ–“»Ã≈Õ“ -----------------------
