--- a/gamedata/config/misc/trade_semenov.ltx
+++ b/gamedata/config/misc/trade_semenov.ltx
@@ -226,6 +226,7 @@ wpn_colt_m1				;NO TRADE
 wpn_mp5_m2				;NO TRADE
 wpn_sig_m2				;NO TRADE
 wpn_m_134				;NO TRADE
+wpn_dshkm				;NO TRADE
 wpn_vintorez_m1			;NO TRADE
 
 ;------------------------- ¿——Œ–“»Ã≈Õ“ -----------------------
@@ -250,6 +251,7 @@ ammo_m209			= 5,	0.8
 ammo_arbolt			= 6,	0.9
 ammo_m208a			= 5,	0.8
 ammo_flame		    = 3,	0.8
+ammo_12.7x108		= 10,	1
 
 bandage			= 8,	1
 medkit			= 7,	1
@@ -334,6 +336,7 @@ ammo_m209				= 1,	3
 ammo_arbolt				= 1,	3
 ammo_m208a				= 1,	3
 ammo_flame			    = 1,	3
+ammo_12.7x108		= 1,	5
 
 ;ŒÛÊËÂ
 wpn_akm_akm30_ironsight		;NO TRADE  	   
