Убрал СИГи отовсюду
Кривые старые модели - не нужны, не вписываются.

--- a/gamedata/config/misc/ph_box_items_by_communities.ltx
+++ b/gamedata/config/misc/ph_box_items_by_communities.ltx
@@ -80,7 +80,7 @@ wpn_spas12				= 0
 wpn_aks74ub_aks74ub30_ironsight				= 0
 wpn_mp5					= 0
 wpn_ak74n_ak74n30_ironsight				= 0
-wpn_sig550				= 0
+wpn_m16a1_sk1				= 0
 wpn_groza				= 0
 wpn_val					= 0
 wpn_vintorez			= 0
@@ -293,7 +293,7 @@ wpn_spas12				= 0.003
 wpn_aks74ub_aks74ub30_ironsight				= 0.003
 wpn_mp5					= 0.003
 wpn_ak74n_ak74n30_ironsight				= 0.003
-wpn_sig550				= 0.003
+wpn_m16a1_sk1				= 0.003
 wpn_groza				= 0.003
 wpn_val					= 0.003
 wpn_vintorez			= 0.003
@@ -334,7 +334,7 @@ wpn_spas12				= 0.01
 wpn_aks74ub_aks74ub30_ironsight				= 0.01
 wpn_mp5					= 0.01
 wpn_ak74n_ak74n30_ironsight				= 0.01
-wpn_sig550				= 0.01
+wpn_m16a1_sk1				= 0.01
 wpn_groza				= 0.01
 wpn_val					= 0.01
 wpn_vintorez			= 0.01
