--- a/gamedata/config/misc/random_task_reward.ltx
+++ b/gamedata/config/misc/random_task_reward.ltx
@@ -689,7 +689,7 @@ hard_task =
 
 [rndm_tsk_rwrd_freedom_weapon]
 easy_task = wpn_m16a1_sk1, wpn_wincheaster1300
-normal_task = wpn_m16a1_sk1, wpn_spas12, wpn_sg550sr_sk1, wpn_sig550, wpn_g36
+normal_task = wpn_m16a1_sk1, wpn_spas12, wpn_g36
 hard_task = wpn_flame, wpn_awm, wpn_fn2000
 
 [rndm_tsk_rwrd_freedom_ammo]
