--- a/gamedata/config/misc/treasure_manager.ltx
+++ b/gamedata/config/misc/treasure_manager.ltx
@@ -1012,7 +1012,7 @@ community = stalker
 target = 5418
 name = val_secret_0018_name
 description = val_secret_0018_description
-items = wpn_sig550,ammo_5.56x45_ss190,120
+items = wpn_m16a1_sk1,ammo_5.56x45_ss190,120
 condlist = {=actor_on_level(l04_darkvalley) =npc_rank(experienced)} 5
 community = bandit
 
@@ -1649,7 +1649,7 @@ community = stalker, freedom
 target = 5216
 name = mil_secret_0016_name
 description = mil_secret_0016_description
-items = wpn_sg550sr_sk1,ammo_5.56x45_ap,60,ammo_m209,5
+items = wpn_m16a1_sk1,wpn_addon_grenade_launcher_m203,wpn_addon_scope_colt3,ammo_5.56x45_ap,60,ammo_m209,5
 condlist = {=npc_rank(veteran)} 5, {=npc_rank(master)} 4
 
 [mil_secret_0017]
@@ -1704,7 +1704,7 @@ community = stalker, dolg, freedom
 target = 5223
 name = mil_secret_0023_name
 description = mil_secret_0023_description
-items = wpn_sig550,ammo_5.56x45_ap,50
+items = wpn_m16a1_sk1,ammo_5.56x45_ap,50
 condlist = {=npc_rank(veteran)} 5, {=npc_rank(master)} 5
 community = stalker, freedom, dolg
 
