--- a/gamedata/config/weapons/w_sig550.ltx
+++ b/gamedata/config/weapons/w_sig550.ltx
@@ -1,3 +1,6 @@
+;KRodin: убрал его отовсюду, ввиду его кривости и несовместимости с рукхудом.
+
+
 ; SIG SG-550
 ;--------------------------------------
 [wpn_sig550]:identity_immunities,base_wpn_zoom
