--- a/gamedata/config/weapons/w_sig550sr_sk1.ltx
+++ b/gamedata/config/weapons/w_sig550sr_sk1.ltx
@@ -1,3 +1,7 @@
+;KRodin: заменил везде на wpn_awm, т.к. тут кривая модель с кривыми руками, не рассчитанными под рукхуд.
+
+
+
 ;SG 550 Sniper снабжена тяжёлым стволом длиной 650 мм, пламегаситель отсутствует. 
 ;Сошки регулируются по высоте, приклад пластиковый, складывается поворотом на правую сторону ствольной коробки. Приклад оснащён регулируемой "щекой", а также регулируемым резиновым затыльником. Пистолетная рукоятка выполнена по типу снайперской винтовки H&K PSG-1 и регулируется по высоте и углу наклона. УСМ – курковый, режим огня только одиночный, хотя перезаряжание производится автоматически. Питание из магазинов на 5 или 20 патронов, возможно применение стандартных магазинов от SG 550 на 30 патронов
 ;выпускается с 1999 года (на заказ) компанией SWISS ARMS AG и используется полицейскими подразделениями стран Европы и США
