--- a/gamedata/config/misc/items_of_tr_man.ltx
+++ b/gamedata/config/misc/items_of_tr_man.ltx
@@ -541,7 +541,7 @@ arts = af_night_star, af_gold_fish, af_cristall, af_soul, af_electra_moonlight, 
 
 [l05_bar_data]
 arts = af_night_star, af_gold_fish, af_cristall, af_soul, af_electra_moonlight, af_ameba_mica, af_rusty_sea-urchin, af_dummy_glassbeads, af_dummy_spring, af_dummy_dummy, af_dummy_battery, af_dummy_pellicle, af_dummy_glassbeads, af_kaktus, af_fuzz_kolobok
-weapons = wpn_pb, wpn_wincheaster1300, wpn_ak102_ak10230_stok_kobra, wpn_groza, wpn_val, wpn_sig550, wpn_g36, wpn_swd_svd10_pso1, wpn_svu
+weapons = wpn_pb, wpn_wincheaster1300, wpn_ak102_ak10230_stok_kobra, wpn_groza, wpn_val, wpn_m16a1_sk1, wpn_g36, wpn_swd_svd10_pso1, wpn_svu
 outfits = bandit_plash, protection_outfit, specops_outfit
 ammo = ammo_9x18_pmm, ammo_11.43x23_hydro, ammo_11.43x23_fmj, ammo_5.45x39_ap, ammo_5.45x39_fmj, ammo_5.56x45_ss190, ammo_5.56x45_ap, ammo_7.62x39_fmj, ammo_7.62x39_ap, ammo_9x39_ap, ammo_9x39_pab9, ammo_7.62x54_7h14, ammo_7.62x54_7h1, ammo_7.62x54_ap, ammo_og-7b, ammo_arbolt, ammo_gauss
 devices = interactive_detector_simple, interactive_detector_advanced, detector_mine_finder
@@ -550,7 +550,7 @@ other = medkit_scientic, af_mine, grenade_f1, explosive_tank, repair_kit, ammo_v
 [l06_rostok_data]:l05_bar_data
 
 [l07_military_data]:l05_bar_data
-weapons = wpn_spas12, wpn_vintorez, wpn_sg550sr_sk1, wpn_fn2000, wpn_pkm, wpn_awm, wpn_gauss, wpn_swd_svd10_pso1
+weapons = wpn_spas12, wpn_vintorez, wpn_fn2000, wpn_pkm, wpn_awm, wpn_gauss, wpn_swd_svd10_pso1
 outfits = bandit_plash_m1, military_outfit, svoboda_heavy_outfit, exo1
 ammo = ammo_11.43x23_hydro, ammo_11.43x23_fmj, ammo_5.45x39_ap, ammo_5.45x39_fmj, ammo_5.56x45_ss190, ammo_5.56x45_ap, ammo_7.62x39_fmj, ammo_7.62x39_ap, ammo_9x39_ap, ammo_9x39_pab9, ammo_7.62x54_7h14, ammo_7.62x54_7h1, ammo_7.62x54_ap, ammo_og-7b, ammo_arbolt, ammo_gauss, ammo_8.6x70_lm
 devices = interactive_detector_elite, repair_kit
