--- a/gamedata/config/misc/ph_box_items_by_levels.ltx
+++ b/gamedata/config/misc/ph_box_items_by_levels.ltx
@@ -66,7 +66,7 @@ wpn_spas12				= 0
 wpn_aks74ub_aks74ub30_ironsight				= 0
 wpn_mp5					= 0
 wpn_ak74n_ak74n30_ironsight				= 0
-wpn_sig550				= 0
+wpn_m16a1_sk1				= 0
 wpn_groza				= 0
 wpn_val					= 0
 wpn_vintorez			= 0
@@ -240,7 +240,7 @@ ammo_5.56x45_ap			= 1
 ammo_5.45x39_ap			= 1
 
 ;Оружие
-wpn_sig550				= 1
+wpn_m16a1_sk1				= 1
 wpn_svu					= 1
 wpn_groza				= 1
 
@@ -263,7 +263,7 @@ ammo_7.62x54_7h1		= 1
 ammo_9x39_ap			= 1
 
 ;Оружие
-wpn_sig550				= 0
+wpn_m16a1_sk1				= 0
 wpn_spas12				= 1
 wpn_val					= 1
 wpn_swd_svd10_pso1					= 1
