--- a/gamedata/config/misc/ph_box_items_count.ltx
+++ b/gamedata/config/misc/ph_box_items_count.ltx
@@ -66,7 +66,7 @@ wpn_spas12				= 1
 wpn_aks74ub_aks74ub30_ironsight				= 1
 wpn_mp5					= 1
 wpn_ak74n_ak74n30_ironsight				= 1
-wpn_sig550				= 1
+wpn_m16a1_sk1				= 1
 wpn_groza				= 1
 wpn_val					= 1
 wpn_vintorez			= 1
