Убрал СИГи из оллспавна

--- a/gamedata/spawns/sources/alife_l06_rostok.ltx
+++ b/gamedata/spawns/sources/alife_l06_rostok.ltx
@@ -11903,7 +11903,7 @@ cond = {+bar_rescue_research_done}, {+bar_rescue_research_fail}
 
 [spawn]
 medkit_scientic = 2
-wpn_sig550
+wpn_m16a1_sk1
 ammo_5.56x45_ss190 = 30
 END
 
