--- a/gamedata/spawns/sources/alife_l11_pripyat.ltx
+++ b/gamedata/spawns/sources/alife_l11_pripyat.ltx
@@ -15958,7 +15958,7 @@ pri_monolith = true
 [dont_spawn_character_supplies]
 
 [spawn]
-wpn_sig550
+wpn_m16a1_sk1
 ammo_5.56x45_ss190  = 2
 medkit = 3
 bandage = 3
@@ -16023,7 +16023,7 @@ pri_monolith = true
 [dont_spawn_character_supplies]
 
 [spawn]
-wpn_sig550
+wpn_m16a1_sk1
 ammo_5.56x45_ss190  = 2
 medkit = 3
 bandage = 3
@@ -16101,7 +16101,7 @@ combat_ignore_cond = {=pri_monolith_combat_ignore}
 [dont_spawn_character_supplies]
 
 [spawn]
-wpn_sig550
+wpn_m16a1_sk1
 ammo_5.56x45_ss190  = 2
 medkit = 3
 bandage = 4
@@ -16775,7 +16775,7 @@ pri_stadium = true
 [dont_spawn_character_supplies]
 
 [spawn]
-wpn_sig550
+wpn_m16a1_sk1
 ammo_5.56x45_ap  = 2
 wpn_rpg7
 ammo_og-7b = 2
