Прописал недостающие бампы

--- a/gamedata/textures/textures.ltx
+++ b/gamedata/textures/textures.ltx
@@ -1480,7 +1480,7 @@
         wpn\wpn_bolt                     = bump_mode[use:wpn\wpn_bolt_bump], material[2.85], parallax[no]
         wpn\wpn_bullet1                  = bump_mode[none], material[2.85], parallax[no]
         wpn\wpn_bullet1_545              = bump_mode[none], material[2.85], parallax[no]
-;        wpn\wpn_colt                     = bump_mode[use:wpn\wpn_colt_bump], material[2.85], parallax[no]
+        wpn\wpn_colt                     = bump_mode[use:wpn\wpn_colt_bump], material[2.85], parallax[no]
 		wpn_colt1911	                 = bump_mode[use:wpn\wpn_colt_bump], material[2.85], parallax[no]
 		wpn_colt1911cr                   = bump_mode[use:wpn\wpn_colt_bump], material[2.85], parallax[no]
         wpn\wpn_desert_eagle             = bump_mode[use:wpn\wpn_desert_eagle_bump], material[2.85], parallax[no]
@@ -6426,6 +6426,15 @@ wpn\glock18c\glock18c_mag				= bump_mode[none], material[2.85], parallax[no]
 		wpn\mosin\bolt	 				 = bump_mode[use:wpn\mosin\bolt_bump], material[2.85], parallax[no]
 		wpn\mosin\scope_pu1	 			 = bump_mode[use:wpn\mosin\scope_pu1_bump], material[2.85], parallax[no]
 		wpn\mosin\sil_762_bramit	 	 = bump_mode[use:wpn\mosin\sil_762_bramit_bump], material[2.85], parallax[no]
+wpn\mp5\mp5	 			= bump_mode[use:wpn\mp5\mp5_bump], material[2.85], parallax[no]
+wpn\mp5\mp5sd			= bump_mode[use:wpn\mp5\mp5sd_bump], material[2.85], parallax[no]
+	wpn\pecheneg\wpn_pecheneg_1	 	= bump_mode[use:wpn\pecheneg\wpn_pecheneg_1_bump], material[2.85], parallax[no]
+	wpn\pecheneg\wpn_pecheneg_2		= bump_mode[use:wpn\pecheneg\wpn_pecheneg_2_bump], material[2.85], parallax[no]
+wpn\spas12\spas12	 			= bump_mode[use:wpn\spas12\spas12_bump], material[2.85], parallax[no]
+wpn\spas12\wpn_spas12			= bump_mode[use:wpn\spas12\wpn_spas12_bump], material[2.85], parallax[no]
+	wpn\upgrades\m_key	 	= bump_mode[use:wpn\upgrades\m_key_bump], material[2.85], parallax[no]
+	wpn\upgrades\rpg_scope	= bump_mode[use:wpn\upgrades\rpg_scope_bump], material[2.85], parallax[no]
+	wpn\upgrades\zenitka	= bump_mode[use:wpn\upgrades\zenitka_bump], material[2.85], parallax[no]
 wpn\vss\vss							= bump_mode[use:wpn\vss\vss_bump], material[2.85], parallax[no]
 wpn\vsk94\wpn_9a91					= bump_mode[use:wpn\vsk94\wpn_9a91_bump], material[2.85], parallax[no]
 wpn\vsk94\wpn_addon_sil_9a91		= bump_mode[use:wpn\vsk94\wpn_addon_sil_9a91_bump], material[2.85], parallax[no]
