--- a/gamedata/config/weapons/w_binoc.ltx
+++ b/gamedata/config/weapons/w_binoc.ltx
@@ -127,7 +127,7 @@ snd_reload			= $no_sound, 0
 snd_close			= $no_sound, 0
 ;------------------------------------------------------------------------------------------
 
-vision_present				= false
+vision_present				= true
 scope_dynamic_zoom = true
 vis_frame_speed				= 4						; скорость, с которой наводится рамка на цель
 vis_frame_color             = 0.8,0.8,0.8,1.0		; 0.7; цвет рамки RGBA (A) Не учитывается
