Эффектор обнаружения полтергейстами

--- a/gamedata/config/creatures/m_poltergeist.ltx
+++ b/gamedata/config/creatures/m_poltergeist.ltx
@@ -40,6 +40,8 @@ Spawn_Inventory_Item_Probability = 0.6
 
 type				= flamer
 
+detection_pp_effector_name  =	poltergeist_detection_effector
+
 ;---------------------------------------------------------------------
 ; Physics
 ;---------------------------------------------------------------------
