--- a/gamedata/config/misc/postprocess.ltx
+++ b/gamedata/config/misc/postprocess.ltx
@@ -229,3 +229,12 @@ pp_eff_cyclic = 1
 ppe_file		= snd_shock.ppe
 radius_min		= 0.0
 radius_max		= 0.5
+
+;-------------------------------------------------------------------------------
+; Детект нас полтергейстами
+;-------------------------------------------------------------------------------
+[poltergeist_detection_effector]
+pp_eff_name 	= poltergeist_scan.ppe
+pp_eff_cyclic 	= 1
+pp_eff_overlap = true
+;-------------------------------------------------------------------------------
