--- a/gamedata/config/misc/postprocess.ltx
+++ b/gamedata/config/misc/postprocess.ltx
@@ -43,6 +43,10 @@ ppe_file		= radiation.ppe
 radius_min		= 0.5
 radius_max		= 1.1
 
+[postprocess_psi_aura]:postprocess_psi
+pp_eff_name		= radiation.ppe
+pp_eff_cyclic	= 1
+pp_eff_overlap  = true
 
 [postprocess_death]
 ppe_file		= radiation.ppe
