--- a/gamedata/config/weathers/weather_cloudy_dark_rain.ltx
+++ b/gamedata/config/weathers/weather_cloudy_dark_rain.ltx
@@ -66,7 +66,7 @@ sky_rotation		=	0
 sky_color		=	0.29, 0.29, 0.29
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.5638, 0.5638, 0.5638, 0.001, 0.001
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.000000, 0.000000, 0.000000
 fog_density		=	1.0
@@ -81,7 +81,7 @@ wind_direction	=	0.0
 ambient                    = 0.007813, 0.007813, 0.007813
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.1137, 0.1373, 0.1765
-sun_color		=	0, 0, 0
+sun_color		=	0.001,	0.001,	0.001
 sun_dir		=	-28.200000, 0
 env_ambient		=	ambient_env_night_rain
 
@@ -95,7 +95,7 @@ sky_rotation		=	0
 sky_color		=	0.29, 0.29, 0.29
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.5638, 0.5638, 0.5638, 0.001, 0.001
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.000000, 0.000000, 0.000000
 fog_density		=	1.0
@@ -124,7 +124,7 @@ sky_rotation		=	0
 sky_color		=	0.29, 0.29, 0.29
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.5638, 0.5638, 0.5638, 0.001, 0.001
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.015625, 0.011719, 0.019531
 fog_density		=	1.0
@@ -153,7 +153,7 @@ sky_rotation		=	0
 sky_color		=	0.29, 0.29, 0.29
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.5638, 0.5638, 0.5638, 0.001, 0.001
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.000000, 0.000000, 0.000000
 fog_density		=	1.0
@@ -182,7 +182,7 @@ sky_rotation		=	0
 sky_color		=	0.29, 0.29, 0.29
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.5065, 0.5065, 0.5065, 0.001, 0.001
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color		= 0.0000, 0.0000, 0.0000
 fog_density		=	1.0
@@ -211,7 +211,7 @@ sky_rotation	=	0
 sky_color		=	0.29, 0.29, 0.29
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.5065, 0.5065, 0.5065, 0.001, 0.001
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.000000, 0.000000, 0.000000
 fog_density		=	1.0
@@ -240,7 +240,7 @@ sky_rotation		=	0
 sky_color		=	0.29, 0.29, 0.29
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.5638, 0.5638, 0.5638, 0.001, 0.001
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color		= 0.0000, 0.0000, 0.0000
 fog_density		=	1.0
@@ -270,7 +270,7 @@ sky_color		=	0.35, 0.33, 0.38
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.7000, 0.6000, 0.9000, 0.400, 1.000
 far_plane		=	600
-fog_distance	=	300
+fog_distance	=	600
 fog_color                        = 0.000000, 0.000000, 0.000000
 fog_density		=	1.00
 rain_density	=	1.0
@@ -299,7 +299,7 @@ sky_color		=	0.35, 0.33, 0.38
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.7000, 0.6000, 0.9000, 0.400, 1.000
 far_plane		=	600
-fog_distance	=	300
+fog_distance	=	600
 fog_color                        = 0.000000, 0.000000, 0.000000
 fog_density		=	1.00
 rain_density	=	1.0
@@ -328,7 +328,7 @@ sky_color		=	0.4,    0.38,  0.43
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.7000, 0.6000, 0.9000, 0.400, 1.000
 far_plane		=	600
-fog_distance	=	300
+fog_distance	=	600
 fog_color                        = 0.000000, 0.000000, 0.000000
 fog_density		=	1.00
 rain_density	=	1.0
@@ -342,7 +342,7 @@ wind_direction	=	0.0
 ambient		= 0.0182, 0.0182, 0.0188
 lmap_color		=	1.0, 	1.0, 	1.0
 hemi_color                 = 0.453125, 0.460938, 0.484375
-sun_color		=	0, 0, 0
+sun_color		=	0.0625, 0.0345, 0.031	; 0.0225, 0.0145, 0.011
 sun_dir			=	-1.709000, 110.383200
 env_ambient		=	ambient_env_night_rain
 
@@ -357,7 +357,7 @@ sky_color		=	0.45, 0.43, 0.48
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.7000, 0.6000, 0.9000, 0.400, 1.000
 far_plane		=	600
-fog_distance	=	300
+fog_distance	=	600
 fog_color                        = 0.117188, 0.117188, 0.132813
 fog_density		=	1.00
 rain_density	=	1.0
@@ -371,7 +371,7 @@ wind_direction	=	0.0
 ambient		= 0.0182, 0.0182, 0.0188
 lmap_color		=	1.0, 	1.0, 	1.0
 hemi_color		= 0.3647, 0.3647, 0.3765
-sun_color		=	0, 0, 0
+sun_color		=	0.0645,	0.0365,	0.033	; 0.0245, 0.0165, 0.013
 sun_dir			=	-3.109000, 108.474300
 env_ambient		=	ambient_env_night_rain
 
@@ -386,7 +386,7 @@ sky_color		=	0.6, 0.6, 0.6
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.400, 1.000
 far_plane		=	600
-fog_distance	=	300
+fog_distance	=	600
 fog_color                        = 0.125000, 0.125000, 0.132813
 fog_density		=	1.00
 rain_density	=	1.0
@@ -400,7 +400,7 @@ wind_direction	=	0.0
 ambient		= 0.0182, 0.0182, 0.0188
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.3647, 0.3647, 0.3765
-sun_color		=	0, 0, 0
+sun_color		=	0.24,	0.215,	0.19
 sun_dir			=	-10.680000, 99.040110
 env_ambient		=	ambient_env_rain
 
@@ -414,7 +414,7 @@ sky_rotation		=	0
 sky_color		=	0.7, 0.7, 0.7
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.400, 1.000
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.222656, 0.214844, 0.214844
 fog_density		=	1.00
@@ -429,7 +429,7 @@ wind_direction	=	0.0
 ambient		= 0.0196, 0.0196, 0.0204
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.3922, 0.3922, 0.4078
-sun_color		=	0, 0, 0
+sun_color		=	0.01,	0.01,	0.01
 sun_dir 		= 	-20.160000, 87.593720
 env_ambient		=	ambient_env_rain
 
@@ -443,7 +443,7 @@ sky_rotation		=	0
 sky_color		=	0.7, 0.7, 0.7
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.400, 1.000
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.082031, 0.082031, 0.066406
 fog_density		=	1.00
@@ -458,7 +458,7 @@ wind_direction	=	0.0
 ambient		= 0.0196, 0.0196, 0.0204
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.3922, 0.3922, 0.4078
-sun_color		=	0, 0, 0
+sun_color		=	0.01,	0.01,	0.01
 sun_dir			=	-29.570000, 75.338200
 env_ambient		=	ambient_env_rain
 
@@ -472,7 +472,7 @@ sky_rotation		=	0
 sky_color		=	0.75, 0.75, 0.75
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.400, 1.000
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.093750, 0.093750, 0.093750
 fog_density		=	1.00
@@ -487,7 +487,7 @@ wind_direction	=	0.0
 ambient		= 0.0214, 0.0212, 0.0218
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.4275, 0.4235, 0.4353
-sun_color		=	0, 0, 0
+sun_color		=	0.01,	0.01,	0.01
 sun_dir			=	-38.430000, 61.361200
 env_ambient		=	ambient_env_rain
 
@@ -501,7 +501,7 @@ sky_rotation		=	0
 sky_color		=	0.75, 0.75, 0.75
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.400, 1.000
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.113281, 0.109375, 0.109375
 fog_density		=	1.00
@@ -516,7 +516,7 @@ wind_direction	=	0.0
 ambient		= 0.0214, 0.0212, 0.0218
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.4275, 0.4235, 0.4353
-sun_color		=	0, 0, 0
+sun_color		=	0.01,	0.01,	0.01
 sun_dir			=	-46.040000, 44.532400
 env_ambient		=	ambient_env_rain
 
@@ -530,7 +530,7 @@ sky_rotation		=	0
 sky_color		=	0.75, 0.75, 0.75
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.400, 1.000
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.132813, 0.132813, 0.144531
 fog_density		=	1.00
@@ -545,7 +545,7 @@ wind_direction	=	0.0
 ambient		= 0.0214, 0.0212, 0.0218
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.4275, 0.4235, 0.4353
-sun_color		=	0, 0, 0
+sun_color		=	0.01,	0.01,	0.01
 sun_dir			=	-51.420000, 23.920400
 env_ambient		=	ambient_env_rain
 
@@ -559,7 +559,7 @@ sky_rotation		=	0
 sky_color		=	0.75, 0.75, 0.75
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.400, 1.000
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.226563, 0.226563, 0.234375
 fog_density		=	1.00
@@ -574,7 +574,7 @@ wind_direction	=	0.0
 ambient		= 0.0214, 0.0212, 0.0218
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.4275, 0.4235, 0.4353
-sun_color		=	0, 0, 0
+sun_color		=	0.01,	0.01,	0.01
 sun_dir			=	-53.410000, 0.158500
 env_ambient		=	ambient_env_rain
 
@@ -588,7 +588,7 @@ sky_rotation		=	0
 sky_color		=	0.75, 0.75, 0.75
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.400, 1.000
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.132813, 0.132813, 0.113281
 fog_density		=	1.00
@@ -603,7 +603,7 @@ wind_direction	=	0.0
 ambient		= 0.0214, 0.0212, 0.0218
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.4275, 0.4235, 0.4353
-sun_color		=	0, 0, 0
+sun_color		=	0.01,	0.01,	0.01
 sun_dir			=	-51.440000, -23.617000
 env_ambient		=	ambient_env_rain
 
@@ -617,7 +617,7 @@ sky_rotation		=	0
 sky_color		=	0.7, 0.7, 0.7
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.400, 1.000
-far_plane		= 	470
+far_plane		= 	170
 fog_distance	=	270
 fog_color                        = 0.113281, 0.109375, 0.089844
 fog_density		=	1.00
@@ -632,7 +632,7 @@ wind_direction	=	0.0
 ambient		= 0.0200, 0.0198, 0.0204
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.4000, 0.3961, 0.4078
-sun_color		=	0, 0, 0
+sun_color		=	0.01,	0.01,	0.01
 sun_dir			=	-46.080000, -44.255800
 env_ambient		=	ambient_env_rain
 
@@ -646,7 +646,7 @@ sky_rotation		=	0
 sky_color		=	0.7, 0.7, 0.7
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.400, 1.000
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.113281, 0.109375, 0.089844
 fog_density		=	1.00
@@ -661,7 +661,7 @@ wind_direction	=	0.0
 ambient		= 0.0200, 0.0198, 0.0204
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.4000, 0.3961, 0.4078
-sun_color		=	0, 0, 0
+sun_color		=	0.01,	0.01,	0.01
 sun_dir			=	-46.080000, -44.255800
 env_ambient		=	ambient_env_rain
 
@@ -675,8 +675,8 @@ sky_rotation		=	0
 sky_color		=	0.64, 0.64, 0.64
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.400, 1.000
-far_plane		=	600
-fog_distance	=	300
+far_plane		=	450
+fog_distance	=	450
 fog_color                        = 0.113281, 0.105469, 0.109375
 fog_density		=	1.00
 rain_density	=	1.0
@@ -690,7 +690,7 @@ wind_direction	=	0.0
 ambient		= 0.0182, 0.0180, 0.0186
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.3647, 0.3608, 0.3725
-sun_color		=	0, 0, 0
+sun_color		=	0.01,	0.01,	0.01
 sun_dir			=	-38.470000, -61.106100
 env_ambient		=	ambient_env_rain
 
@@ -705,7 +705,7 @@ sky_color		=	0.64, 0.64, 0.64
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.350, 1.000
 far_plane		=	600
-fog_distance	=	300
+fog_distance	=	600
 fog_color                        = 0.082031, 0.078125, 0.066406
 fog_density		=	1.00
 rain_density	=	1.0
@@ -719,7 +719,7 @@ wind_direction	=	0.0
 ambient		= 0.0182, 0.0180, 0.0186
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.3647, 0.3608, 0.3725
-sun_color		=	0, 0, 0
+sun_color		=	0.01,	0.01,	0.01
 sun_dir			=	-29.610000, -75.093800
 env_ambient		=	ambient_env_rain
 
@@ -733,8 +733,8 @@ sky_rotation		=	0
 sky_color		=	0.63, 0.62, 0.60
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.350, 1.000
-far_plane		=	600
-fog_distance	=	300
+far_plane		=	450
+fog_distance	=	450
 fog_color                        = 0.210938, 0.214844, 0.203125
 fog_density		=	1.00
 rain_density	=	1.0
@@ -748,7 +748,7 @@ wind_direction	=	0.0
 ambient		= 0.0176, 0.0175, 0.0175
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.3529, 0.3490, 0.3490
-sun_color		=	0, 0, 0
+sun_color		=	0.01,	0.01,	0.01
 sun_dir			=	-20.180000, -87.350200
 env_ambient		=	ambient_env_rain
 
@@ -762,7 +762,7 @@ sky_rotation		=	0
 sky_color		=	0.63, 0.60, 0.57
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.350, 1.000
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.210938, 0.214844, 0.203125
 fog_density		=	1.00
@@ -777,7 +777,7 @@ wind_direction	=	0.0
 ambient		= 0.0176, 0.0171, 0.0165
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.3529, 0.3412, 0.3294
-sun_color		=	0, 0, 0
+sun_color		=	0.04, 	0.04, 	0.04
 sun_dir			=	-10.690000, -98.790000
 env_ambient		=	ambient_env_rain
 
@@ -791,7 +791,7 @@ sky_rotation		=	0
 sky_color		=	0.56, 0.56, 0.56
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.200, 1.000
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.062500, 0.062500, 0.062500
 fog_density		=	1.00
@@ -806,7 +806,7 @@ wind_direction	=	0.0
 ambient		= 0.0159, 0.0159, 0.0163
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.3176, 0.3176, 0.3255
-sun_color		=	0, 0, 0
+sun_color		=	0.001, 	0.001, 	0.001
 sun_dir			=	-3.088000, -108.214600
 env_ambient		=	ambient_env_rain
 
@@ -820,7 +820,7 @@ sky_rotation		=	0
 sky_color		=	0.56, 0.56, 0.56
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.200, 1.000
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.000000, 0.000000, 0.000000
 fog_density		=	1.00
@@ -835,7 +835,7 @@ wind_direction	=	0.0
 ambient		= 0.0159, 0.0159, 0.0163
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.3176, 0.3176, 0.3255
-sun_color		=	0, 0, 0
+sun_color		=	0.001, 	0.001, 	0.001
 sun_dir			=	-1.683000, -110.121300
 env_ambient		=	ambient_env_rain
 
@@ -849,7 +849,7 @@ sky_rotation		=	0
 sky_color		=	0.54, 0.54, 0.54
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.200, 1.000
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.000000, 0.000000, 0.000000
 fog_density		=	1.00
@@ -864,7 +864,7 @@ wind_direction	=	0.0
 ambient		= 0.0153, 0.0153, 0.0157
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.3059, 0.3059, 0.3137
-sun_color		=	0, 0, 0
+sun_color		=	0.001, 	0.001, 	0.001
 sun_dir			=	-1.683000, -110.121300
 env_ambient		=	ambient_env_rain
 
@@ -878,7 +878,7 @@ sky_rotation		=	0
 sky_color		=	0.54, 0.54, 0.54
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 1.0000, 1.0000, 1.0000, 0.200, 1.000
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.011719, 0.011719, 0.011719
 fog_density		=	1.00
@@ -893,7 +893,7 @@ wind_direction	=	0.0
 ambient		= 0.0153, 0.0153, 0.0157
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.3059, 0.3059, 0.3137
-sun_color		=	0, 0, 0
+sun_color		=	0.001, 	0.001, 	0.001
 sun_dir			=	3.033000, 44.311000
 env_ambient		=	ambient_env_rain
 
@@ -907,7 +907,7 @@ sky_rotation		=	0
 sky_color		=	0.3, 0.3, 0.3
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.5794, 0.5794, 0.5794, 0.001, 0.001
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.011719, 0.011719, 0.011719
 fog_density		=	1.0
@@ -922,7 +922,7 @@ wind_direction	=	0.0
 ambient		= 0.0059, 0.0071, 0.0090
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.1176, 0.1412, 0.1804
-sun_color		=	0, 0, 0
+sun_color		=	0.001,	0.001,	0.001
 sun_dir			=	-2, -122
 env_ambient		=	ambient_env_night_rain
 
@@ -936,7 +936,7 @@ sky_rotation		=	0
 sky_color		=	0.3, 0.3, 0.3
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.5794, 0.5794, 0.5794, 0.001, 0.001
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.011719, 0.011719, 0.011719
 fog_density		=	1.0
@@ -951,7 +951,7 @@ wind_direction	=	0.0
 ambient		= 0.0059, 0.0071, 0.0090
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.1176, 0.1412, 0.1804
-sun_color		=	0, 0, 0
+sun_color		=	0.001,	0.001,	0.001
 sun_dir		=	-9.569000, 38.800000
 env_ambient		=	ambient_env_night_rain
 
@@ -965,7 +965,7 @@ sky_rotation		=	0
 sky_color		=	0.29, 0.29, 0.29
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.5638, 0.5638, 0.5638, 0.001, 0.001
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color                        = 0.011719, 0.011719, 0.011719
 fog_density		=	1.0
@@ -980,7 +980,7 @@ wind_direction	=	0.0
 ambient		= 0.0057, 0.0069, 0.0088
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.1137, 0.1373, 0.1765
-sun_color		=	0, 0, 0
+sun_color		=	0.001,	0.001,	0.001
 sun_dir		=	-20.005000, 28.301000
 env_ambient		=	ambient_env_night_rain
 
@@ -994,7 +994,7 @@ sky_rotation		=	0
 sky_color		=	0.29, 0.29, 0.29
 clouds_texture	=	sky\sky_oblaka
 clouds_color	= 0.5638, 0.5638, 0.5638, 0.001, 0.001
-far_plane		=	550
+far_plane		=	350
 fog_distance	=	350
 fog_color           = 0.011719, 0.011719, 0.011719
 fog_density		=	1.0
@@ -1009,6 +1009,6 @@ wind_direction	=	0.0
 ambient		= 0.0057, 0.0069, 0.0088
 lmap_color		=	1.0,	1.0,	1.0
 hemi_color		= 0.1137, 0.1373, 0.1765
-sun_color		=	0, 0, 0
+sun_color		=	0.001,	0.001,	0.001
 sun_dir		=	-26.543000, 14.870000
 env_ambient		=	ambient_env_night_rain
