--- a/gamedata/config/misc/quest_items.ltx
+++ b/gamedata/config/misc/quest_items.ltx
@@ -1,7 +1,7 @@
 ; Квестовые предметы
 
 [base_quest_item]:identity_immunities
-ph_heavy         = true  ;Чтоб гиганты/полтеры не раскидывали предметы.
+ph_heavy         = true  ;Чтоб гиганты/полтеры не раскидывали предметы. Вообще, я сделаю в движке чтоб предметы с quest_item = true тоже не раскидывали, но и это не помешает.
 use_ai_locations = false ;Чтоб предметы не проваливались под землю.
 
 
