af_mobkiller непродаваемый

--- a/gamedata/config/misc/trade_barman.ltx
+++ b/gamedata/config/misc/trade_barman.ltx
@@ -267,6 +267,7 @@ af_transmut_8			;NO TRADE
 novice_outfit				;NO TRADE
 stalker_outfit				;NO TRADE
 exo_outfit					;NO TRADE
+af_mobkiller		;NO TRADE
 ;Бандиты
 bandit_plash   	= 0.15,	0.1
 bandit_plash_m1    	= 0.15,	0.1
@@ -647,6 +648,7 @@ wpn_vintorez		= 1,	5
 wpn_wincheaster1300	= 1,	5
 wpn_crossbow		;NO TRADE
 wpn_awm				    ;NO TRADE
+af_mobkiller		;NO TRADE
 wpn_flame			= 1,	5
 wpn_mp40            = 1,	4
 
