--- a/gamedata/config/misc/trade_billy.ltx
+++ b/gamedata/config/misc/trade_billy.ltx
@@ -13,6 +13,7 @@ buy_supplies = billy_generic_supplies
 novice_outfit				;NO TRADE
 stalker_outfit				;NO TRADE
 exo_outfit					;NO TRADE
+af_mobkiller		;NO TRADE
 ;Бандиты
 bandit_plash   				= 0.2,	0.3
 bandit_plash_m1    			= 0.2,	0.3
@@ -809,6 +810,7 @@ irp-b 				= 1,	5
 
 ;Предметы
 detector_simple		;NO TRADE
+af_mobkiller		;NO TRADE
 interactive_detector_simple	= 1,	6
 interactive_detector_advanced		= 1,	5
 cartridge_a		= 1, 6
