--- a/gamedata/config/misc/trade_dolg.ltx
+++ b/gamedata/config/misc/trade_dolg.ltx
@@ -267,6 +267,7 @@ af_transmut_8			;NO TRADE
 ;------------------------- ПОКУПКА -----------------------
 [dolg_generic_buy]:unic_buy, weapons_buy_petrenko
 ;Артефакты
+af_mobkiller		;NO TRADE
 af_medusa				= 1.3,	1
 af_cristall_flower		= 1.5,	1.1
 af_night_star			= 1.6,	1.2
@@ -727,6 +728,7 @@ voda 					= 1,	3
 irp-b 				= 1,	6
 
 ;Предметы
+af_mobkiller		;NO TRADE
 detector_simple		= 1,	3
 interactive_detector_simple	= 1,	6
 interactive_detector_advanced		= 1,	5
