--- a/gamedata/config/misc/trade_drozd.ltx
+++ b/gamedata/config/misc/trade_drozd.ltx
@@ -31,6 +31,7 @@ af_ameba_mica			= 1.7,	1.3
 af_drops				= 0.5,	0.2
 af_fireball				= 1.5,	1.1
 af_cristall				= 1.7,	1.3
+af_mobkiller		;NO TRADE
 
 af_dummy_glassbeads		= 1.4,	1.2
 af_dummy_pellicle		= 1.4,	1.2
@@ -322,7 +323,7 @@ explosive_mobiltank	= 1, 1
 treasure_item = 1,1
 
 
-;------------------------- Џродажа -----------------------
+;------------------------- Продажа -----------------------
 [drozd_generic_sale]:unic_sale
 ;Броники
 novice_outfit		= 1,	3
@@ -465,6 +466,7 @@ irp-b 			= 1,	6
 interactive_detector_simple		= 1,	5
 interactive_detector_advanced	= 1,	4
 interactive_detector_elite		;NO TRADE
+af_mobkiller		;NO TRADE
 detector_mine_finder = 1,	3
 autodoctor		    = 1,	7
 hand_radio_f		= 1,	4
