--- a/gamedata/config/misc/trade_ecolog.ltx
+++ b/gamedata/config/misc/trade_ecolog.ltx
@@ -48,6 +48,7 @@ af_transmut_5			= 1,	1
 af_transmut_6			= 1,	1
 af_transmut_7			= 1,	1
 af_transmut_8			= 1,	1
+af_mobkiller		;NO TRADE
 
 af_maska_2              ;NO TRADE
 af_mine                 ;NO TRADE
@@ -440,5 +441,6 @@ harmonica_f		    = 1,	3
 explosive_tank	    = 1,	3
 repair_kit		    = 1,	3
 sigaret             ;NO TRADE
+af_mobkiller		;NO TRADE
 matras              = 1,	2
 amk_metka           = 1,	3
