--- a/gamedata/config/misc/trade_esc_guns_remontnik.ltx
+++ b/gamedata/config/misc/trade_esc_guns_remontnik.ltx
@@ -37,6 +37,7 @@ af_dummy_glassbeads	; NO TRADE
 af_dummy_pellicle	; NO TRADE
 af_dummy_battery	; NO TRADE
 af_dummy_dummy	; NO TRADE
+af_mobkiller		;NO TRADE
 af_dummy_spring	; NO TRADE
 af_fuzz_kolobok	; NO TRADE
 
