--- a/gamedata/config/misc/trade_freedom.ltx
+++ b/gamedata/config/misc/trade_freedom.ltx
@@ -97,6 +97,7 @@ af_ameba_mica			= 1.6,	1.4
 af_drops				= 1.0,	0.5
 af_fireball				= 1.5,	1.3
 af_cristall				= 1.6,	1.4
+af_mobkiller		;NO TRADE
 
 af_dummy_glassbeads		= 1.7,	1.3
 af_dummy_pellicle		= 1.7,	1.3
@@ -468,3 +469,4 @@ repair_kit		    = 1,	3
 sigaret             = 1,	6
 matras              = 1,	2
 amk_metka           = 1,	2
+af_mobkiller		;NO TRADE
