--- a/gamedata/config/misc/trade_generic.ltx
+++ b/gamedata/config/misc/trade_generic.ltx
@@ -96,6 +96,7 @@ af_ameba_mica		= 0.3,	0.1
 af_drops			= 0.3,	0.1
 af_fireball			= 0.3,	0.1
 af_cristall			= 0.3,	0.1
+af_mobkiller		;NO TRADE
 
 af_dummy_glassbeads	= 0.5,	0.2
 af_dummy_pellicle	= 0.5,	0.2
@@ -498,3 +499,4 @@ matras              = 1,	2
 amk_metka           = 1,	2
 first_neutral_planshet           = 1,	200
 diggers_pda		    ;NO TRADE
+af_mobkiller		;NO TRADE
