--- a/gamedata/config/misc/trade_merc.ltx
+++ b/gamedata/config/misc/trade_merc.ltx
@@ -67,6 +67,7 @@ af_rusty_thorn			;NO TRADE
 af_rusty_kristall		= 1.5,	1.1
 af_rusty_sea-urchin		= 1.7,	1.3
 af_ameba_slime			;NO TRADE
+af_mobkiller		;NO TRADE
 af_ameba_slug			= 1.5,	1.1
 af_ameba_mica			= 1.7,	1.3
 af_drops				;NO TRADE
@@ -475,5 +476,6 @@ harmonica_f		    = 1,	3
 explosive_tank	    = 1,	3
 repair_kit		    = 1,	3
 sigaret             ;NO TRADE
+af_mobkiller		;NO TRADE
 matras              = 1,	2
 amk_metka           = 1,	2
