--- a/gamedata/config/misc/trade_new_weapons.ltx
+++ b/gamedata/config/misc/trade_new_weapons.ltx
@@ -135,6 +135,7 @@ mutant_burer_hand	; NO TRADE
 mutant_zombie_hand	; NO TRADE
 mutant_snork_leg	; NO TRADE
 mutant_face_tushkano		; NO TRADE
+af_mobkiller		;NO TRADE
 mutant_hand_kontroler		; NO TRADE
 mutant_poltergeist_glas		; NO TRADE
 mutant_psevdogigant_hand	; NO TRADE
@@ -242,6 +243,7 @@ mutant_psevdodog_tail	; NO TRADE
 mutant_krovosos_jaw	; NO TRADE
 mutant_burer_hand	; NO TRADE
 mutant_zombie_hand	; NO TRADE
+af_mobkiller		;NO TRADE
 mutant_snork_leg	; NO TRADE
 mutant_face_tushkano		; NO TRADE
 mutant_hand_kontroler		; NO TRADE
