--- a/gamedata/config/misc/trade_obmen.ltx
+++ b/gamedata/config/misc/trade_obmen.ltx
@@ -57,6 +57,7 @@ af_ameba_mica		= 0.0,	0.0
 af_drops			= 0.0,	0.0
 af_fireball			= 0.0,	0.0
 af_cristall			= 0.0,	0.0
+af_mobkiller		;NO TRADE
 
 af_dummy_glassbeads	= 0.0,	0.0
 af_dummy_pellicle	= 0.0,	0.0
@@ -339,6 +340,7 @@ af_dummy_glassbeads	= 0.0,	0.0
 af_dummy_pellicle	= 0.0,	0.0
 af_dummy_battery	= 0.0,	0.0
 af_dummy_dummy		= 0.0,	0.0
+af_mobkiller		;NO TRADE
 af_dummy_spring		= 0.0,	0.0
 af_fuzz_kolobok		= 0.0,	0.0
 af_kaktus			= 0.0,	0.0
