--- a/gamedata/config/misc/trade_povar.ltx
+++ b/gamedata/config/misc/trade_povar.ltx
@@ -71,6 +71,7 @@ af_ameba_mica		= 1.6,	1.3
 af_drops			= 1.0,	0.5
 af_fireball			= 1.5,	1.3
 af_cristall			= 1.6,	1.3
+af_mobkiller		;NO TRADE
 
 af_dummy_glassbeads	= 1.8,	1.5
 af_dummy_pellicle	= 1.8,	1.5
@@ -400,6 +401,7 @@ detector_simple		= 1,	6
 interactive_detector_simple		= 1,	6
 interactive_detector_advanced	;NO TRADE
 interactive_detector_elite		;NO TRADE
+af_mobkiller		;NO TRADE
 detector_mine_finder = 1,	4
 autodoctor		    ;NO TRADE
 hand_radio_f		= 1,	6
