--- a/gamedata/config/misc/trade_semenov.ltx
+++ b/gamedata/config/misc/trade_semenov.ltx
@@ -52,6 +52,7 @@ af_ameba_slug			= 1.8,	2.5
 af_ameba_mica			= 1.8,	2.5
 af_drops				= 1.8,	2.5
 af_fireball				= 1.8,	2.5
+af_mobkiller		;NO TRADE
 af_cristall				= 1.8,	2.5
 
 af_dummy_glassbeads		= 2.5,	3.3
@@ -301,6 +302,7 @@ bandit_plash_m1    			;NO TRADE
 
 af_maska_1                ;NO TRADE
 af_mine				    ;NO TRADE
+af_mobkiller		;NO TRADE
 
 ;Аммуниция
 ammo_7.62x25_p			= 1,	3
