--- a/gamedata/config/misc/trade_swamp_doc.ltx
+++ b/gamedata/config/misc/trade_swamp_doc.ltx
@@ -43,6 +43,7 @@ af_gravi				;NO TRADE
 af_gold_fish			;NO TRADE
 af_blood				;NO TRADE
 af_mincer_meat			;NO TRADE
+af_mobkiller		;NO TRADE
 af_soul				    = 1.3,	1
 af_electra_sparkler		;NO TRADE
 af_electra_flash		;NO TRADE
@@ -317,6 +318,7 @@ bandit_plash_m1   	;NO TRADE
 
 af_maska_1          = 1,	2
 af_maska_2          ;NO TRADE
+af_mobkiller		;NO TRADE
 af_mine				= 1,	3.5
 
 ;Аммуниция
