--- a/gamedata/config/misc/trade_trader.ltx
+++ b/gamedata/config/misc/trade_trader.ltx
@@ -97,6 +97,7 @@ af_ameba_mica			= 1.3,	1
 af_drops				= 1,	0.8
 af_fireball				= 1.2,	1
 af_cristall				= 1.3,	1
+af_mobkiller		;NO TRADE
 
 af_dummy_glassbeads		= 1.3,	1
 af_dummy_pellicle		= 1.3,	1
@@ -417,6 +418,7 @@ bandit_plash_m1   	;NO TRADE
 
 af_maska_1          = 1,	2
 af_maska_2          ;NO TRADE
+af_mobkiller		;NO TRADE
 af_mine				= 1,	3.5
 
 ;Аммуниция
