--- a/gamedata/config/misc/trade_unic.ltx
+++ b/gamedata/config/misc/trade_unic.ltx
@@ -28,6 +28,7 @@ specops_outfit		;NO TRADE
 military_outfit		;NO TRADE
 
 af_maska_1            ;NO TRADE
+af_mobkiller		;NO TRADE
 af_maska_2            = 0.7,	0.4
 
 ;оружие
@@ -148,6 +149,7 @@ wpn_tt				= 1,	4
 
 af_maska_1          = 1,	2
 af_maska_2			= 1,	2
+af_mobkiller		;NO TRADE
 
 af_transmut_1		;NO TRADE
 af_transmut_2		;NO TRADE
