--- a/gamedata/config/misc/trade_weapons.ltx
+++ b/gamedata/config/misc/trade_weapons.ltx
@@ -21,6 +21,7 @@ wpn_vintorez_m1 ;NO TRADE
 wpn_svu_m1				;NO TRADE
 wpn_m_134				;NO TRADE
 wpn_dshkm				;NO TRADE
+af_mobkiller		;NO TRADE
 
 [arena_weapons_buy_notrade]
 wpn_pm_arena			;NO TRADE
