--- a/gamedata/config/misc/trade_armourer.ltx
+++ b/gamedata/config/misc/trade_armourer.ltx
@@ -68,6 +68,7 @@ af_transmut_7		;NO TRADE
 af_transmut_8		;NO TRADE
 af_maska_1			;NO TRADE
 af_mine				;NO TRADE
+af_mobkiller		;NO TRADE
 ;Броники _trade_unic.ltx
 outfit_novice_m1		;NO TRADE
 outfit_bandit_m1		;NO TRADE
@@ -244,6 +245,7 @@ protection_outfit	;NO TRADE
 monolit_exoskeleton ;NO TRADE
 bandit_plash_m1   	;NO TRADE
 af_mine          	;NO TRADE
+af_mobkiller		;NO TRADE
 detector_simple					;NO TRADE
 interactive_detector_simple		;NO TRADE
 interactive_detector_advanced	;NO TRADE
