--- a/gamedata/config/misc/trade_bandit.ltx
+++ b/gamedata/config/misc/trade_bandit.ltx
@@ -30,6 +30,7 @@ af_ameba_mica			;NO TRADE
 af_drops				;NO TRADE
 af_fireball				;NO TRADE
 af_cristall				;NO TRADE
+af_mobkiller		;NO TRADE
 af_dummy_glassbeads		;NO TRADE
 af_dummy_pellicle		;NO TRADE
 af_dummy_battery		;NO TRADE
@@ -341,6 +342,7 @@ dolg_outfit						= 1,	3
 ecolog_outfit					;NO TRADE
 protection_outfit					;NO TRADE
 monolit_exoskeleton    				;NO TRADE
+af_mobkiller		;NO TRADE
 bandit_plash   			= 1,	2
 bandit_plash_m1    			= 1,	2
 
