--- a/gamedata/config/misc/trade_military.ltx
+++ b/gamedata/config/misc/trade_military.ltx
@@ -68,6 +68,7 @@ af_rusty_sea-urchin		= 1.7,	1.3
 af_ameba_slime			= 0.4,	0.1
 af_ameba_slug			= 1.5,	1.1
 af_ameba_mica			= 1.7,	1.3
+af_mobkiller		;NO TRADE
 af_drops				= 0.4,	0.1
 af_fireball				= 1.5,	1.1
 af_cristall				= 1.7,	1.3
@@ -453,6 +454,7 @@ irp-b 			= 1,	6
 interactive_detector_simple		= 1,	5
 interactive_detector_advanced	= 1,	4
 interactive_detector_elite		;NO TRADE
+af_mobkiller		;NO TRADE
 detector_mine_finder = 1,	3
 autodoctor		    = 1,	7
 hand_radio_f		= 1,	4
