--- a/gamedata/config/misc/trade_monolit.ltx
+++ b/gamedata/config/misc/trade_monolit.ltx
@@ -69,6 +69,7 @@ af_ameba_slime			= 0.4,	0.1
 af_ameba_slug			= 1.3,	1.0
 af_ameba_mica			= 1.5,	1.1
 af_drops				= 0.4,	0.1
+af_mobkiller		;NO TRADE
 af_fireball				= 1.3,	1.0
 af_cristall				= 1.5,	1.1
 
@@ -432,5 +433,6 @@ harmonica_f		    = 1,	4
 explosive_tank	    = 1,	4
 repair_kit		    = 1,	4
 sigaret             ;NO TRADE
+af_mobkiller		;NO TRADE
 matras              = 1,	2
 amk_metka           = 1,	2
