--- a/gamedata/config/misc/trade_pri.ltx
+++ b/gamedata/config/misc/trade_pri.ltx
@@ -97,6 +97,7 @@ af_ameba_mica			= 1.6,	1.1
 af_drops				= 0.4,	0.1
 af_fireball				= 1.3,	1.0
 af_cristall				= 1.6,	1.1
+af_mobkiller		;NO TRADE
 
 af_dummy_glassbeads		= 1.4,	1.1
 af_dummy_pellicle		= 1.4,	1.1
@@ -466,6 +467,7 @@ interactive_detector_advanced	= 1,	3
 interactive_detector_elite		= 1,	3
 detector_mine_finder = 1,	4
 autodoctor		    = 1,	3
+af_mobkiller		;NO TRADE
 hand_radio_f		= 1,	3
 guitar_f			= 1,	3
 harmonica_f		    = 1,	3
