Узнал, что Сидор авмку по убойной цене берёт. Поправил. Теперь дорого не  продать, и только Сидору, Голландцу и в Припяти. И ещё кому-то.

--- a/gamedata/config/misc/trade_esc_guns_remontnik.ltx
+++ b/gamedata/config/misc/trade_esc_guns_remontnik.ltx
@@ -76,6 +76,7 @@ w_dynamite	= 0.3,  0.4
 
 wpn_knife	= 0.1,  0.3
 wpn_crowbar	; NO TRADE
+wpn_awm				= NO TRADE
 
 wpn_pkm		= 0.5,  0.7
 wpn_mp40	= 0.1,  0.3
@@ -394,6 +395,7 @@ wpn_rpg7				= 1,	1.5 ///;NO TRADE;NO TRADE
 wpn_g36					= 1,	1.5 ///;NO TRADE;NO TRADE
 wpn_fn2000				= 1,	1.5 ///;NO TRADE;NO TRADE
 wpn_binoc				= 1,	1.5
+wpn_awm				= NO TRADE
 
 ;ADDONS
 wpn_addon_scope				;NO TRADE
