--- a/gamedata/config/misc/trade_trader.ltx
+++ b/gamedata/config/misc/trade_trader.ltx
@@ -184,6 +184,7 @@ wpn_spas12				= 0.3,	0.1
 wpn_svu				    = 0.3,	0.1
 wpn_vintorez			= 0.3,	0.1	  
 wpn_gauss			    = 0.3,	0.1
+wpn_awm				= 0.12,	0.1
 
 ;Пулеметы
 wpn_pkm				    = 0.3,	0.1
